feat : 필수 7 리팩토링까지 구현